[tool.poetry]
name = "prefect-test-app"
version = "0.1.0"
description = ""
authors = ["jn"]
readme = "README.md"
packages = [{include = "prefect_test_app"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.6.3"
faker = "^15.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
